Node.replaceChild with an empty DocumentFragment should not dispatch DOMSubtreeModified twice.

We should check the emptiness.  The new behavior matches to Firefox and Edge.

* LayoutTests/fast/loader/delete-inside-cancelTimer.html
  The replaceChild behavior change affects the output of the test. This CL
  doesn't update the result and removes the test entirely because
  - It's a crash test for CachedResource. [1]
  - Now the class is on Oilpan heap, and the test isn't helpful at all.

[1] https://chromium.googlesource.com/chromium/src/+/b0606248d72a84adc6c5540a32ff2f84c4943fc7 [formerly 5e8f72d1c3a42b5ab0c727f52c24009b36721255]

BUG=645441

Review-Url: https://codereview.chromium.org/2325143002
Cr-Commit-Position: refs/heads/master@{#417871}

Former-commit-id: 8f99074d5ad2b2ef95d3192b37884dc434e71ff3